add dynamic secrets

--- a/k8s/release/hmi/hmi-pactbroker/templates/secretprovider.yaml
+++ b/k8s/release/hmi/hmi-pactbroker/templates/secretprovider.yaml
@@ -9,15 +9,13 @@ spec:
     usePodIdentity: "true"
     {{- range $.Values.keyvaults}}
     keyvaultName: {{ .name }}
-    objects:  |
-      array:
+    objects: |
+        array:
+    {{- range $secret := .secrets}}       
         - |
-          objectName: pact-db-user
+          objectName: {{ $secret }}
           objectType: secret        # object types: secret, key or cert
           objectVersion: ""         # [OPTIONAL] object versions, default to latest if empty
-        - |
-          objectName: pact-db-password
-          objectType: secret        # object types: secret, key or cert
-          objectVersion: ""         # [OPTIONAL] object versions, default to latest if empty
+    {{- end -}}
     tenantId: {{ .tenantid }} 
     {{- end }}
