--- a/k8s/release/hmi/hmi-pactbroker/templates/secretprovider.yaml
+++ b/k8s/release/hmi/hmi-pactbroker/templates/secretprovider.yaml
@@ -2,7 +2,7 @@
 apiVersion: secrets-store.csi.x-k8s.io/v1alpha1
 kind: SecretProviderClass
 metadata:
-  name: azure-kvname-podid
+  name: {{ .Values.aadIdentityName }}-podid
 spec:
   provider: azure
   parameters:
