--- a/k8s/environments/sbox/common/hmi/hmi-pactbroker.yaml
+++ b/k8s/environments/sbox/common/hmi/hmi-pactbroker.yaml
@@ -43,6 +43,9 @@ spec:
       resourcegroup: hmi-sharedinfra-sbox-rg
       subscriptionid: a8140a9e-f1b0-481f-a4de-09e2ee23f7ab
       tenantid: 531ff96d-0ae9-462a-8d2d-bec7c0b42082
+      secrets:
+      - pact-db-user
+      - pact-db-password
 
     readinessProbe:
       enabled: false
