--- a/k8s/release/hmi/hmi-pactbroker/templates/secretprovider.yaml
+++ b/k8s/release/hmi/hmi-pactbroker/templates/secretprovider.yaml
@@ -16,6 +16,8 @@ spec:
           objectName: {{ $secret }}
           objectType: secret        # object types: secret, key or cert
           objectVersion: ""         # [OPTIONAL] object versions, default to latest if empty
-    {{- end -}}
+    {{- end }}
+    resourceGroup: {{ .resourcegroup }}
+    subscriptionId: {{ .subscriptionid }}
     tenantId: {{ .tenantid }} 
     {{- end }}
