--- a/k8s/release/hmi/hmi-pactbroker/templates/deployment.yaml
+++ b/k8s/release/hmi/hmi-pactbroker/templates/deployment.yaml
@@ -47,7 +47,7 @@ spec:
             - |
               START=$(date +%s)
               for i in {1..11}; do if [[ -f /kvmnt/pact-db-user && -f /kvmnt/pact-db-password ]]; then break; elif [ $i -gt 10 ]; then exit 2; else sleep 6; fi; done END=$(date +%s) && DIFF=$(( $END - $START )) && echo "$(date) Finished after $DIFF seconds" >> /tmp/secrets.log
-              export PACT_BROKER_DATABASE_USERNAME=$(cat /kvmnt/pact-db-user)@{{- required "postgresql.postgresqlHost " .Values.postgresql.postgresqlHost -}}; export PACT_BROKER_DATABASE_PASSWORD=$(cat /kvmnt/pact-db-password); sleep 180; /sbin/my_init
+              export PACT_BROKER_DATABASE_USERNAME=$(cat /kvmnt/pact-db-user)@{{- required "postgresql.postgresqlHost " .Values.postgresql.postgresqlHost -}}; export PACT_BROKER_DATABASE_PASSWORD=$(cat /kvmnt/pact-db-password); /sbin/my_init
           volumeMounts:
           {{- range $.Values.keyvaults}}
           - name: {{ .name }}
