corrected db name

--- a/k8s/environments/sbox/common/hmi/hmi-pactbroker.yaml
+++ b/k8s/environments/sbox/common/hmi/hmi-pactbroker.yaml
@@ -33,8 +33,8 @@ spec:
     aadClientId: b3715a37-28ac-4abd-aa19-b0232bcc735a
     postgresql:
       enabled: true
-      postgresqlServerName: "hmi-pactbroker-sbox"
-      postgresqlHost: "hmi-pactbroker-sbox.postgres.database.azure.com"
+      postgresqlServerName: "hmi-pact-broker-sbox"
+      postgresqlHost: "hmi-pact-broker-sbox.postgres.database.azure.com"
       postgresqlDatabase: "hmi-pactbroker"
       postgresqlPort: "5432"
       postgresqlDisableSsl: "true"
