--- a/k8s/stg/releases/docmosis/docmosis.yaml
+++ b/k8s/stg/releases/docmosis/docmosis.yaml
@@ -23,7 +23,7 @@ spec:
     ingress:
       enabled: true
       annotations:
-        kubernetes.io/ingress.class: traefik
+        kubernetes.io/ingress.class: traefik-int
       paths:
         - /
       tls: []
