updated the configmap for omsagent to scrape prometheus metrics

--- a/k8s/environments/sbox/cluster-00-overlay/kustomization.yaml
+++ b/k8s/environments/sbox/cluster-00-overlay/kustomization.yaml
@@ -6,6 +6,7 @@ bases:
 - ../../../release/admin/kured
 - ../../../release/admin/keyvault-flexvol
 - ../../../release/admin/secrets-csi-driver
+- ../../../release/admin/omsagent
 # - ../../../release/admin/env-injector
 # - ../../../release/kube-system/nodelocaldns
 
