--- a/k8s/prod/releases/mi/mi-integration-service.yaml
+++ b/k8s/prod/releases/mi/mi-integration-service.yaml
@@ -30,6 +30,7 @@ spec:
         APPINSIGHTS_INSTRUMENTATIONKEY: "8bfa6e68-ae68-442c-a237-83cde3b092f3"
         DATA_SOURCE_CCD: true
         MI_CLIENT_ID: 60146a49-7399-4b18-b36c-576671c8f9bc
+        MI_VALIDATE_ALL_LANDING_BLOBS: true
       smoketests:
         image: ssprivateprod.azurecr.io/mi-integration-service:prod-7a70bae
         enabled: true
