--- a/k8s/environments/test/common/mi/mi-data-extractor.yaml
+++ b/k8s/environments/test/common/mi/mi-data-extractor.yaml
@@ -36,6 +36,7 @@ spec:
         environment:
           ETL_MSICLIENTID: 905cc792-3ecc-4c1e-ae18-40ed86ca6a8d
           APPINSIGHTS_INSTRUMENTATIONKEY: "350a1a4c-d746-4c63-814c-4fee92e6e07c"
+          TASK_VALIDATE_BLOB: true
     global:
       subscriptionId: "3eec5bde-7feb-4566-bfb6-805df6e10b90"
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
