updating secrets for DEV cluster

--- a/k8s/environments/dev/common/secrets/kube-slack-values.enc.yaml
+++ b/k8s/environments/dev/common/secrets/kube-slack-values.enc.yaml
@@ -1,22 +1,22 @@
-apiVersion: ENC[AES256_GCM,data:5nE=,iv:CzHMfVT1dalP/eBVu2oFdxj8PSY5EDhzyZFE/uvVFJQ=,tag:SNj13QPoiaPiDXpwY5ZbvA==,type:str]
+apiVersion: ENC[AES256_GCM,data:dg8=,iv:CoM61b+d2Y+gmOjW3SXKiSoq8FR01pmQzgMWCN1/WVc=,tag:OblMyrRhWq9HNgJJKUyurw==,type:str]
 data:
-    values.yaml: ENC[AES256_GCM,data:9QZcZd2BPs1KISCurrlZtAVyD9+iC9lNej5HPyMfZZ3I4O2bBKKbtPgGLGJ9kvm0H/MX7xgvF21pT+loMTh0gXs4tWDjldkmhGn1s4nbPUZLr8URuNrf1VKFmjWC8U53cYqmlZuaYe5L7x3+c24rG5XLb85oBFpuld3tu5cPKUWo7XNv,iv:30czaSBZ/WMfgAJXexsePdEf1jmQS0oYqLW8sB4Xkes=,tag:mnPQzay9JpMT2oVxfl4Vtg==,type:str]
-kind: ENC[AES256_GCM,data:+Lh92Nmh,iv:+YxCccbVD99uXzUR/hPH5m2f7i3sd6w6kiEfR9M/YIQ=,tag:NACRSK4SNmZAOEYVpzmG4w==,type:str]
+    values.yaml: ENC[AES256_GCM,data:H87p+AbTjiDADG0I/9rh/SfYWIVrfUVK+7n+q1AE6divYtcPv0X5h79xjHgtuD0OHoLGEmDbkLYPROP8lfwokC3sLIW/1qLzta62TfPvzPQuvzsag9Va9WZuTfZAF1H49YVyx/IbTpPwmJjpsLEIclDBQ7UMiBZa8hIH5vBNb/CJFOQO,iv:3LYbBZ1zlja64umcdF8v8X9khJh7lRsqoDFNE2st6zg=,tag:Z8m4NRT83CjrUhnhfP4njQ==,type:str]
+kind: ENC[AES256_GCM,data:cB1XxvKS,iv:HroOWN3bWOtZaG3Z+GKhjaYrDcOx//qB6C1eeRy/ZFk=,tag:LuPvDmk4b/nv44iZo20Pbw==,type:str]
 metadata:
     creationTimestamp: null
-    name: ENC[AES256_GCM,data:lVS5StPRBEuG9BCoHh1Mq7A=,iv:zJBWGI8EMsFFgZbv383SwBGfMt/X7Whp93NEaAkn0hM=,tag:RQYDKcUQ/xNdgZUYspBrMA==,type:str]
-    namespace: ENC[AES256_GCM,data:8SM1a0M=,iv:Ci+r6+DoiwbhTCu/nsUxEycQcOgIv7L9GVCEZub2maQ=,tag:Us2FFasGAg2SXIz5thiNbQ==,type:str]
+    name: ENC[AES256_GCM,data:muP5yttE9Mzc6bW6UNaeH9c=,iv:eB4YCsYZT9geRk1fx+HgtAijzzIHBn1dKj9yBZQ8Mkc=,tag:CzeabvD12Uuaq9kyDEVEMQ==,type:str]
+    namespace: ENC[AES256_GCM,data:+6JOm4w=,iv:zh+yOQPv/URqdlDU1jQdeY4PEXGN5//4pXdHbwIycGY=,tag:8x4RXvYjhPm57jNRmqq3qA==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv:
     -   vault_url: https://dtssharedservicesdevkv.vault.azure.net
         name: sops-key
-        version: 3e8ebb9d861347f2a74db8fb893a699a
-        created_at: '2020-09-17T11:13:28Z'
-        enc: TOAOr9IoBe5rAWtbJfOmxqIGxeLX7j67uKf7eKAgP_v5wneD76FJttXQ8uhMM3FD7tASa8EANvdqG2gltLOdbeV4CiAc1ZlhqIh-5LElT1ccQGJbtkJNcYnOieS7dJ8wLCRgwQVv4F11xD7HjBv-yVoFR7a8-dYpc3k4E59hdxoixxoO2iCTNveozIDdpncrugzM8vwEY4QtRJSGClRBxna177zIAXZzp1fVq46mZ4VBnWgD_9s9798WwybCJaiYzHxctJcl-LaFW_vRGMPXWOs05cqG8scc1bxqjwTEbrEJhcJlgjBt_e0PlJU8rIlbobJOWVXUBpVmVbc3_xQsvg
-    lastmodified: '2020-09-17T11:13:30Z'
-    mac: ENC[AES256_GCM,data:ysE+5kEfD5SyVEdndBnsUcCKqY5MuGyzBv9ljomoSrETi3mugEF4zi/omWekU2zPrDRAqGLX1ePGTYNNJHI6DnoSwOIrAz8p/Wb/+dIubesLZduq3ocMWtSaCEYT0xFZ8CVjSrD8k5dJZVl45EUxjPsxevej1AZxUtnl5EDD9G4=,iv:YMehngHOFhe7LVODeLDbU8/0y0cUSrr/McDsxTB2o8c=,tag:tDc9+6KKGSKchrfb2aNUGQ==,type:str]
+        version: 43e2e53b56b14c71a5dc4cf8df48679e
+        created_at: '2020-10-02T13:30:33Z'
+        enc: ez3OEY7yjEbVhLbg2RTtD9csh-54D7DVo6Nx6q2jc3iXyECuRopPtx9rMhGW6f5odBg_BgRxpZlqzW9rplM-PNDIC94fOB1wvHoymAvPMcSwjJxBj-yNBUXwVJ_EiX9a9AIaNRm1ODCWebamhANIYTe2HM0RXYClFeVBJwrWfS5v50XI8F_MPcVSoIQOgVDZaYCckdxqRsA4OVppj4g48iETgQtNbXJ9m1oaHZC7PPdCkcYW6GSeaYnLkfaldqMhGqVGUdbXpVcW4TTrshBEIdO4v82HjN4i0-kH7vZ8GualPbfgsAF5AB1unoZ9h14_R8VcZolb1YSplP4OcT7ZRQ
+    lastmodified: '2020-10-02T13:30:35Z'
+    mac: ENC[AES256_GCM,data:F9cQuaDjSTZxzA03qFRdswzEA85ueOtLzPQAQDkzHlnk/qekmpn5OykAxg9HSsh1+rOoHc4yIUgN8sQueohhFqs/qC1+GP/2YnuZKypw3NSxpFKCry3nyLf03YrlUkA2rMiE1fyH0b8OP3T8Ub2tceWf4hwsnmV6GAe2DE73dzQ=,iv:FEOnZ6OkMBY4AsaRNJXUJDIjKfBfBO4QVlJboTZgli8=,tag:Xax+zzeaKmD/Cz2RIEyGgg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.5.0
