--- a/k8s/environments/dev/common/secrets/kured-values.enc.yaml
+++ b/k8s/environments/dev/common/secrets/kured-values.enc.yaml
@@ -1,22 +1,22 @@
-kind: ENC[AES256_GCM,data:yhXjH/J5,iv:rNX/QIeQLu3xl0deYamCjFtr8wvbwuKtwOKfahstZN0=,tag:cj39p4hrd2CjmwB8G9QzBw==,type:str]
-apiVersion: ENC[AES256_GCM,data:ypY=,iv:49B8IVy+Qz+qlInVRXL0ZlK9CmWX88X591DvhSeq6TU=,tag:gOzEXjVTXxe9649hrO9eWQ==,type:str]
+kind: ENC[AES256_GCM,data:9sZ+Ntap,iv:qq7O+CfiCAvW/llsn2z4IE6rzBkkPX88db6dliaENQE=,tag:1ib7L8ay3C9DTJD/fm1aWg==,type:str]
+apiVersion: ENC[AES256_GCM,data:9VA=,iv:Wco6sByF9kXfFVCz4lMyeRyL+qHsGRHNFajgWfqlaFI=,tag:mYGPIsSXdntQYB9Frte1qw==,type:str]
 data:
-    values.yaml: ENC[AES256_GCM,data:cUc+yWnKr2iGzliH5WqWIvTREZYKm/YAknM+gr6p+e6Ht8YONKJ8J0BtG1FO8BstS/zE3U7mW4xdS4wzfa/e1j9zT/zET0rn0+ltiO7oVWt+lUrpR3qQsAcbYy86NBHXs47i77iR/Bqq72UyZzurbI3jbPJU0F2kEQpyVDE5Vc88fGo2uVruwwYFDiE=,iv:vpDPLujtGWDQmh6ZtKJsd2v5Ys/Rj8ChdQbpKvLe6dQ=,tag:5gaqGglIRfRbjb8wBcdptw==,type:str]
-type: ENC[AES256_GCM,data:Kwm5+pgw,iv:YggIZRbJWFC6lnKJoo3u1grYW27JalGZMZoAzo0wJpo=,tag:nkTDLzdgAqCx2XDhwBfgTg==,type:str]
+    values.yaml: ENC[AES256_GCM,data:aNSk6EZC24ZjrxNIF4yeM0ZGwuIeq4qSmBNHKpFJSh9la39tskDczaMv5ehdblbzbof5KR4GWnrkTG5+WMT+oqQZGgqapxt6XX4xj3UkR+CyMn9Gd911zOq2NLG9SBEMy+3EU25UKG/2BgCDMz/eJFMFFbu1rtBnMRBvpEjNEV9XpMNduAJ/zGOjKqE=,iv:JwLl9iKOTbb4N3avbikev3ve28BRzauqPsLZMPuLyxs=,tag:TYpAUiCReYh8QLNySz1ovQ==,type:str]
+type: ENC[AES256_GCM,data:FVmoKYcm,iv:r0szcZjm6yw/JHNJu7+4qWLl48z64+kqyCHCcij1Zec=,tag:8W9bgr7ZUzLNZlR7rA5RmQ==,type:str]
 metadata:
-    name: ENC[AES256_GCM,data:FMK30dO2K8q4qNo+,iv:uXZXai1SQW1KYGxJfZZoZgF2OUTnAGO4yrsXRKrc+vc=,tag:GZQlv60jrd+v+gWFzlO8dg==,type:str]
-    namespace: ENC[AES256_GCM,data:QnHteM0=,iv:N9mpD4KDFxGxRAJ6gElq2QxfsuhzMDFdqcQ4VZE6RmE=,tag:fKvOzQSah8Zo2HuIQs8Glw==,type:str]
+    name: ENC[AES256_GCM,data:VPu+38z5LxTT8Jhr,iv:c6X4C3q2ANORhCQ0Zzd5sGxh03d4ZyYwbfk1ASzzkr8=,tag:lQQQ1RHzLR5DI2gPrEzXtA==,type:str]
+    namespace: ENC[AES256_GCM,data:vRlAbQc=,iv:D1lWdH97YzkTykLabynlOsjwWaHAoNEoLfYW1mrIV+w=,tag:3jiJBw4pc13RGWnNWIIQ9Q==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv:
     -   vault_url: https://dtssharedservicesdevkv.vault.azure.net
         name: sops-key
-        version: 3e8ebb9d861347f2a74db8fb893a699a
-        created_at: '2020-09-17T11:13:21Z'
-        enc: D6PYNVUTTfEcU7v5wmgllkuhWiKRCvACdCnnGyw0RX_pdlXBItNyx9REHt4Cu8OwGvCQQXG_uoC1oGmsOZjVbmtWruqfCq7ME6BVHtHi6hlG87sRLVS9cHRd59Yl2PYoGTLDNMnX59P27EWms8f5VjJI_735dEnT3txQ9uzcbjH4UGev4dUk48CuVtflNOwN3vnVi5WxYKN1BwhqDPEfSc8mu5rLZTNYG2co0eWnFBfeXJotrFksD_n87YXU0FcdNKysgDbHnSi9kz2fKlsiSss4H3DT_X7aJZLYzND7_6Og8dsl8srtDw3D-Qm3VdwvDc_WlLtEsOO7de1uF-h2pw
-    lastmodified: '2020-09-17T11:13:23Z'
-    mac: ENC[AES256_GCM,data:FluMmSaDFnQEoyklRIgddZt8m15Vc5XKG6O51IsJB1e2q0ykul9kvnT6smZ38IvLgToyHGZgABQPIq+5k0+71aKpz5Ia0nB4Dgy6pirFWTiBjnG1t5vb3RUMiRCGOgf7Wx7/ea9d3iRCBKNFLEyzY5vNAcENJEfO6yrJyjLmHJ8=,iv:SIJ9jtO4XY+q6Ent98ceZwa4fsbMVaVCn7esrTekt68=,tag:PVIzcFepmQbxJ1pw8URmnQ==,type:str]
+        version: 43e2e53b56b14c71a5dc4cf8df48679e
+        created_at: '2020-10-02T13:30:56Z'
+        enc: lQRbScBG6ngjx2fFmvvHff6PKb2uQrWbs_pKBzwRL97R--UD-1mgRbFVzY16l8XkZhlktf-CMnolIdbNKkiOZFfHCbqFp-taWC6_VqAhpgKZkErvlneu0VInVEjkXkO_457TuVv2GNC3spj6Du_TH6zlq_XHV4kbHjqChuSdrp90sz5Fo9hsnHI12Y_C_vi7JB0AI9CTtdYjtFlG0tlkbSRiPopdn_oOGgUsWchztqaPcVDQSHuoWz6ptd1I5rVRCvToub3FYRAFRu3umsYY_W1Q7Anuz-Fd16OmT0yyZK7ysDtBGPC8auXwttDac_rgAL8I29RvyHcbfNJ6OQ318g
+    lastmodified: '2020-10-02T13:30:58Z'
+    mac: ENC[AES256_GCM,data:7KBDr9VWwpyxqnKHlsQfiM1d7EY9eGofOodgulzNthrwPPj9/JNwV/upML0gZwJShFErnlzvRi8kw6uWvud83JxNlpnPAS1cbDPR83nIZFSlnY6QrjMwP2zbq+7EjsnsZlLvcrllpUBFcSn++TkaLmSH5DbvfLqbLHRxMA/bVY4=,iv:C21wf9jA9MMs4e5SrKubmLfAlj0602BNLiIU0a4rSUE=,tag:EACopdpXGALIeNd56Ok5YQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.5.0
