updating Sops secrets for Dev

--- a/k8s/environments/dev/common/secrets/kube-slack-values.enc.yaml
+++ b/k8s/environments/dev/common/secrets/kube-slack-values.enc.yaml
@@ -1,22 +1,22 @@
-apiVersion: ENC[AES256_GCM,data:dg8=,iv:CoM61b+d2Y+gmOjW3SXKiSoq8FR01pmQzgMWCN1/WVc=,tag:OblMyrRhWq9HNgJJKUyurw==,type:str]
+apiVersion: ENC[AES256_GCM,data:WHo=,iv:lKC5R5J3mmp3gs12J+zjFFaQbHAK3qN0L6I9Qdj5KSU=,tag:3Sk1tIu0BTQmw6PBf8dEQw==,type:str]
 data:
-    values.yaml: ENC[AES256_GCM,data:H87p+AbTjiDADG0I/9rh/SfYWIVrfUVK+7n+q1AE6divYtcPv0X5h79xjHgtuD0OHoLGEmDbkLYPROP8lfwokC3sLIW/1qLzta62TfPvzPQuvzsag9Va9WZuTfZAF1H49YVyx/IbTpPwmJjpsLEIclDBQ7UMiBZa8hIH5vBNb/CJFOQO,iv:3LYbBZ1zlja64umcdF8v8X9khJh7lRsqoDFNE2st6zg=,tag:Z8m4NRT83CjrUhnhfP4njQ==,type:str]
-kind: ENC[AES256_GCM,data:cB1XxvKS,iv:HroOWN3bWOtZaG3Z+GKhjaYrDcOx//qB6C1eeRy/ZFk=,tag:LuPvDmk4b/nv44iZo20Pbw==,type:str]
+    values.yaml: ENC[AES256_GCM,data:bkRSsnr2IDorHl4px7iuX92tYweQuSJx7+AGnHM9g2f2wAB2SB/ir+LgJ29s8toa50Dao5cZ6mC3AYuJmESGcE8CLaeINEzg5SmaLCfgHtcupWWomS5dtnNIC/zh4Ync4Z/nTBbK0eSJI0wf9hs8Saz8MO+lzOMdP0gxM6rbxG9TbgBc,iv:sHCKqDJWAdbULIJ1cmNzmgOTIdPB89jZ0hGjKdS5zq4=,tag:UoBGGWhMArN7BpXbrxikPg==,type:str]
+kind: ENC[AES256_GCM,data:gIQKHEgm,iv:MkbhbHs6TUWZdw5M7ZaVWx7Dr5fW/4H1j7vMr5TqRFo=,tag:yIej87SzrvqynQFH02jcgw==,type:str]
 metadata:
     creationTimestamp: null
-    name: ENC[AES256_GCM,data:muP5yttE9Mzc6bW6UNaeH9c=,iv:eB4YCsYZT9geRk1fx+HgtAijzzIHBn1dKj9yBZQ8Mkc=,tag:CzeabvD12Uuaq9kyDEVEMQ==,type:str]
-    namespace: ENC[AES256_GCM,data:+6JOm4w=,iv:zh+yOQPv/URqdlDU1jQdeY4PEXGN5//4pXdHbwIycGY=,tag:8x4RXvYjhPm57jNRmqq3qA==,type:str]
+    name: ENC[AES256_GCM,data:65rxDDb76Clmu+ZoPTeryPI=,iv:KjFqJZjlM8+HFNGLIdqBOGpa0SenxESFaowN0Wnvq2c=,tag:8GFnDLMDNZ0DjxIDs4md6g==,type:str]
+    namespace: ENC[AES256_GCM,data:4idtWkA=,iv:ACjJj9xrEnja+60H+Eh3Ww9flWE7IZCxzaCT/QieX6I=,tag:gqhDJy0lTwJMn/6ZIhEFRQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv:
     -   vault_url: https://dtssharedservicesdevkv.vault.azure.net
         name: sops-key
-        version: 43e2e53b56b14c71a5dc4cf8df48679e
-        created_at: '2020-10-02T13:30:33Z'
-        enc: ez3OEY7yjEbVhLbg2RTtD9csh-54D7DVo6Nx6q2jc3iXyECuRopPtx9rMhGW6f5odBg_BgRxpZlqzW9rplM-PNDIC94fOB1wvHoymAvPMcSwjJxBj-yNBUXwVJ_EiX9a9AIaNRm1ODCWebamhANIYTe2HM0RXYClFeVBJwrWfS5v50XI8F_MPcVSoIQOgVDZaYCckdxqRsA4OVppj4g48iETgQtNbXJ9m1oaHZC7PPdCkcYW6GSeaYnLkfaldqMhGqVGUdbXpVcW4TTrshBEIdO4v82HjN4i0-kH7vZ8GualPbfgsAF5AB1unoZ9h14_R8VcZolb1YSplP4OcT7ZRQ
-    lastmodified: '2020-10-02T13:30:35Z'
-    mac: ENC[AES256_GCM,data:F9cQuaDjSTZxzA03qFRdswzEA85ueOtLzPQAQDkzHlnk/qekmpn5OykAxg9HSsh1+rOoHc4yIUgN8sQueohhFqs/qC1+GP/2YnuZKypw3NSxpFKCry3nyLf03YrlUkA2rMiE1fyH0b8OP3T8Ub2tceWf4hwsnmV6GAe2DE73dzQ=,iv:FEOnZ6OkMBY4AsaRNJXUJDIjKfBfBO4QVlJboTZgli8=,tag:Xax+zzeaKmD/Cz2RIEyGgg==,type:str]
+        version: c3027a429d574a559d854c84fae08419
+        created_at: '2020-10-06T10:07:37Z'
+        enc: Y9eE62Sz8AWtGd44rx5fMJ3FPcicysflUhohHKQljuHJyT16YT9cpgmfEoC44NxV-IncE95AyWC34aFaFJ53pMu25nzRvnBUn-zByg5LJo0tFPVMk7uN2DM1KfXxs9hYxKhiIwiCwZEXB508NbxAya7umwiRy9tKiQwWZjMHEciGA2WCBdaPtZkj35PqEdogGy1-2q8eCsCfKW76QDFxTxWjp0-rAWEx6nmv1XdYuWlKBwXovoYF6FBI2iM9-lA0LLE5ut30mB49IideliekEXRMfEGnhwvKxsJa-aBIA-6aHTXmyEMfCARVPuTQUi2JogAgdZz7hRcVtWYDNX9qMg
+    lastmodified: '2020-10-06T10:07:38Z'
+    mac: ENC[AES256_GCM,data:VcArlrDLnugc24UyUMzT10MigESIH+WvS+w+XuYc70F+I602yjB1SdgoLI0Kgu70gNqSzaVntAhX2RcDZY+P9nXJFTGWVYaEj1AJS3hYlBEpGHspd5Csbd/1Qc4A/6PUGbIo2FSw/qUhOOEqCqj/6qSuLtbA4ECe5Ne4KwT3smk=,iv:jQy35T/IeD89mWue225dpe4zakbV0w2BIl0VbWaYkJw=,tag:80SdQ4MhruGYntVIW0LjZw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.5.0
