--- a/k8s/environments/dev/common/secrets/kured-values.enc.yaml
+++ b/k8s/environments/dev/common/secrets/kured-values.enc.yaml
@@ -1,22 +1,22 @@
-kind: ENC[AES256_GCM,data:9sZ+Ntap,iv:qq7O+CfiCAvW/llsn2z4IE6rzBkkPX88db6dliaENQE=,tag:1ib7L8ay3C9DTJD/fm1aWg==,type:str]
-apiVersion: ENC[AES256_GCM,data:9VA=,iv:Wco6sByF9kXfFVCz4lMyeRyL+qHsGRHNFajgWfqlaFI=,tag:mYGPIsSXdntQYB9Frte1qw==,type:str]
+kind: ENC[AES256_GCM,data:SD1Mju/u,iv:BHxfsaHmPs2hQP5vLhXdw7bgEikftfpJj6IdwKw4ghs=,tag:Lk/T0ShSh26FVCWbpOOUMw==,type:str]
+apiVersion: ENC[AES256_GCM,data:vcI=,iv:W55S8V1jUXLNMonLeWcJVHqRA9wHabzurz5kEYJHViI=,tag:a+nXOv2Tgk618d2zFAxLFw==,type:str]
 data:
-    values.yaml: ENC[AES256_GCM,data:aNSk6EZC24ZjrxNIF4yeM0ZGwuIeq4qSmBNHKpFJSh9la39tskDczaMv5ehdblbzbof5KR4GWnrkTG5+WMT+oqQZGgqapxt6XX4xj3UkR+CyMn9Gd911zOq2NLG9SBEMy+3EU25UKG/2BgCDMz/eJFMFFbu1rtBnMRBvpEjNEV9XpMNduAJ/zGOjKqE=,iv:JwLl9iKOTbb4N3avbikev3ve28BRzauqPsLZMPuLyxs=,tag:TYpAUiCReYh8QLNySz1ovQ==,type:str]
-type: ENC[AES256_GCM,data:FVmoKYcm,iv:r0szcZjm6yw/JHNJu7+4qWLl48z64+kqyCHCcij1Zec=,tag:8W9bgr7ZUzLNZlR7rA5RmQ==,type:str]
+    values.yaml: ENC[AES256_GCM,data:XzBee7l/M4QnjZNxXhtZyN0EWwh3ZNN9grF2mZd7cVAPUxE8Ec9RTlmHyeV5Y+jd/SP8Pd09iRoiK9sVKHG2vm1E32d+X9/le6Rjvr+42el8FdF+vm2C+7sCOCa2OmvdixTSDdqcoXAzmBQNdegmGipTtJrX82ICwJN2471Ib5SDSAFeEtIkcUckdPQ=,iv:NMO/9ng9OXT7ixMUqemY8nSXGAPjVJW/SaipBd7EEUI=,tag:ynv4fbxkCaYiZImCKyPikA==,type:str]
+type: ENC[AES256_GCM,data:jQEZFcA2,iv:6BcH9M4YG4lJ6HaJNV5HOOsEzXBJWAP+T9wcqHGqCIM=,tag:ZD3x5LYJMEjO1EsbHgJjAg==,type:str]
 metadata:
-    name: ENC[AES256_GCM,data:VPu+38z5LxTT8Jhr,iv:c6X4C3q2ANORhCQ0Zzd5sGxh03d4ZyYwbfk1ASzzkr8=,tag:lQQQ1RHzLR5DI2gPrEzXtA==,type:str]
-    namespace: ENC[AES256_GCM,data:vRlAbQc=,iv:D1lWdH97YzkTykLabynlOsjwWaHAoNEoLfYW1mrIV+w=,tag:3jiJBw4pc13RGWnNWIIQ9Q==,type:str]
+    name: ENC[AES256_GCM,data:ZX6PWHFIw2Ws84De,iv:YWaAae2Z0wPRPjkp7bdjmksRtUQa8LuYto4MNnK5a8Q=,tag:u2ZDyTawyAhAGwTjxQ+TXQ==,type:str]
+    namespace: ENC[AES256_GCM,data:VXjuRog=,iv:vpjPhTOZ/LhcKbI99rNKYh1aAQa5LgfLhHcY/7zMEXg=,tag:vcpS/5u/SEW2Uw75UvgHgg==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv:
     -   vault_url: https://dtssharedservicesdevkv.vault.azure.net
         name: sops-key
-        version: 43e2e53b56b14c71a5dc4cf8df48679e
-        created_at: '2020-10-02T13:30:56Z'
-        enc: lQRbScBG6ngjx2fFmvvHff6PKb2uQrWbs_pKBzwRL97R--UD-1mgRbFVzY16l8XkZhlktf-CMnolIdbNKkiOZFfHCbqFp-taWC6_VqAhpgKZkErvlneu0VInVEjkXkO_457TuVv2GNC3spj6Du_TH6zlq_XHV4kbHjqChuSdrp90sz5Fo9hsnHI12Y_C_vi7JB0AI9CTtdYjtFlG0tlkbSRiPopdn_oOGgUsWchztqaPcVDQSHuoWz6ptd1I5rVRCvToub3FYRAFRu3umsYY_W1Q7Anuz-Fd16OmT0yyZK7ysDtBGPC8auXwttDac_rgAL8I29RvyHcbfNJ6OQ318g
-    lastmodified: '2020-10-02T13:30:58Z'
-    mac: ENC[AES256_GCM,data:7KBDr9VWwpyxqnKHlsQfiM1d7EY9eGofOodgulzNthrwPPj9/JNwV/upML0gZwJShFErnlzvRi8kw6uWvud83JxNlpnPAS1cbDPR83nIZFSlnY6QrjMwP2zbq+7EjsnsZlLvcrllpUBFcSn++TkaLmSH5DbvfLqbLHRxMA/bVY4=,iv:C21wf9jA9MMs4e5SrKubmLfAlj0602BNLiIU0a4rSUE=,tag:EACopdpXGALIeNd56Ok5YQ==,type:str]
+        version: c3027a429d574a559d854c84fae08419
+        created_at: '2020-10-06T10:07:10Z'
+        enc: Tr-ZxgVxvlQoW1mCey4K3s3_i4eKrYL21KCmSHSDUrQw6rydjyyB729rBnJlyiC7RpQDMTfwBSMNSt3alF9fwLPlGBLL0oTw67sQ97-aU4ZEqlLYH-ZhIGGtRMqARpBl0iAZWlC5KfSEyZcPRp05KRmvvfRt17470qaW0sWMihUhPXqQm_rUl-iqpmk3X24m92XQGrrSw2LsdsZUAaaTKobpjD2NrYWp4NRqU8jciiaebm_mhH2cQkyzw03B4cNmEBVSkDInh0S2OpQy-eiJY9Te64fWiJVdSc0TNC0sdNhbiWpk_xCvFdwAflYvqmkzngsNWV59771ih--2JZHpbQ
+    lastmodified: '2020-10-06T10:07:13Z'
+    mac: ENC[AES256_GCM,data:Sc3z0czf48wNVCAOzlNwNNj/k+PGX0b9QyQkKn0km23CTP8+aiObeh7bJFkvzVfajxMYzRWSSeb8JyPb6jqPRXDSkoztG96fbDyF8SwmU7EFMx89IYZoRNPz31kWl/QOxQamBc1Ha2yrxtdVTIdExRDDNHufdoIHc/HaCuuWIrI=,iv:VvQSH+jYPx5JcghcigdTipUrH2fwTUPUzz82PlHAZFQ=,tag:EV1/Q9Q1S+/Sc4ubLPW+MA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.5.0
