--- a/k8s/stg/releases/juror-digital/moj-nle-reverse-proxy.yaml
+++ b/k8s/stg/releases/juror-digital/moj-nle-reverse-proxy.yaml
@@ -5,7 +5,7 @@ metadata:
   name: moj-nle-reverse-proxy
   namespace: jd
   annotations:
-    flux.weave.works/automated: "true"
+    flux.weave.works/automated: "false"
     flux.weave.works/tag.chart-image: glob:2.*
 spec:
   releaseName: moj-nle-reverse-proxy
