--- a/k8s/release/admin/secrets-csi-driver/secrets-csi-driver.yaml
+++ b/k8s/release/admin/secrets-csi-driver/secrets-csi-driver.yaml
@@ -12,4 +12,8 @@ spec:
   chart:
     repository: https://raw.githubusercontent.com/Azure/secrets-store-csi-driver-provider-azure/master/charts/
     name: csi-secrets-store-provider-azure
-    version: 0.0.10
+    version: 0.0.11
+  values:
+    secrets-store-csi-driver:
+      linux:
+        metricsAddr: ":8090"
