Deploying new cluster set

--- a/k8s/environments/dev/common/secrets/kube-slack-values.enc.yaml
+++ b/k8s/environments/dev/common/secrets/kube-slack-values.enc.yaml
@@ -1,22 +1,23 @@
-apiVersion: ENC[AES256_GCM,data:WHo=,iv:lKC5R5J3mmp3gs12J+zjFFaQbHAK3qN0L6I9Qdj5KSU=,tag:3Sk1tIu0BTQmw6PBf8dEQw==,type:str]
+apiVersion: ENC[AES256_GCM,data:pHU=,iv:aWG+c/exZ1WLd/MoNZdEfrSJKbGX+0v1qvZOLGJ4nwM=,tag:2Mx9XqF2d8xYyT69JYpVtA==,type:str]
 data:
-    values.yaml: ENC[AES256_GCM,data:bkRSsnr2IDorHl4px7iuX92tYweQuSJx7+AGnHM9g2f2wAB2SB/ir+LgJ29s8toa50Dao5cZ6mC3AYuJmESGcE8CLaeINEzg5SmaLCfgHtcupWWomS5dtnNIC/zh4Ync4Z/nTBbK0eSJI0wf9hs8Saz8MO+lzOMdP0gxM6rbxG9TbgBc,iv:sHCKqDJWAdbULIJ1cmNzmgOTIdPB89jZ0hGjKdS5zq4=,tag:UoBGGWhMArN7BpXbrxikPg==,type:str]
-kind: ENC[AES256_GCM,data:gIQKHEgm,iv:MkbhbHs6TUWZdw5M7ZaVWx7Dr5fW/4H1j7vMr5TqRFo=,tag:yIej87SzrvqynQFH02jcgw==,type:str]
+    values.yaml: ENC[AES256_GCM,data:sr5FCDEKG1mS+eHxt3QKCxNhc57W5zAqAR2rZ+Im40htzK8IzfRnsQkhSjijr7V3nqcc3idRTOR+EuoCNCtpztFeSdT1lwxXQx18AvTSuFGtzdHLPdoh9ZAVE8ul8gi/fMfQDM5bk+JSwVhIWGJalxZ1sdsb4supmtsJcKEuU7YP/wIL,iv:oKaD0vBwmoldqSAhRHPjD2h8xsgwnxSjnLS6WO5Lt3E=,tag:C9O4xgQ5O/QcdJz1DOVFLQ==,type:str]
+kind: ENC[AES256_GCM,data:usUMCmrq,iv:xUMGYH5FYk8BBJ+1dw1soRD2EBVn+cICBFBmk/+7n4o=,tag:lhPRCevDGSvfzge53vRQ6g==,type:str]
 metadata:
     creationTimestamp: null
-    name: ENC[AES256_GCM,data:65rxDDb76Clmu+ZoPTeryPI=,iv:KjFqJZjlM8+HFNGLIdqBOGpa0SenxESFaowN0Wnvq2c=,tag:8GFnDLMDNZ0DjxIDs4md6g==,type:str]
-    namespace: ENC[AES256_GCM,data:4idtWkA=,iv:ACjJj9xrEnja+60H+Eh3Ww9flWE7IZCxzaCT/QieX6I=,tag:gqhDJy0lTwJMn/6ZIhEFRQ==,type:str]
+    name: ENC[AES256_GCM,data:+thot+ZZmT3nXtSqaERzHb0=,iv:vJZFmsWP7HwPDkuZp9Pn0whdhoHdt0P9T3T2BsXdDNo=,tag:4qRR7AU37FdZydqLq7lpOg==,type:str]
+    namespace: ENC[AES256_GCM,data:ntzbZt8=,iv:gx8c/jlz720B/H0KwbuObvZNFXoUu3vj4xPn/lz5gXE=,tag:n9qHn1LfeDMYbqT5E6qaMA==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv:
     -   vault_url: https://dtssharedservicesdevkv.vault.azure.net
         name: sops-key
-        version: c3027a429d574a559d854c84fae08419
-        created_at: '2020-10-06T10:07:37Z'
-        enc: Y9eE62Sz8AWtGd44rx5fMJ3FPcicysflUhohHKQljuHJyT16YT9cpgmfEoC44NxV-IncE95AyWC34aFaFJ53pMu25nzRvnBUn-zByg5LJo0tFPVMk7uN2DM1KfXxs9hYxKhiIwiCwZEXB508NbxAya7umwiRy9tKiQwWZjMHEciGA2WCBdaPtZkj35PqEdogGy1-2q8eCsCfKW76QDFxTxWjp0-rAWEx6nmv1XdYuWlKBwXovoYF6FBI2iM9-lA0LLE5ut30mB49IideliekEXRMfEGnhwvKxsJa-aBIA-6aHTXmyEMfCARVPuTQUi2JogAgdZz7hRcVtWYDNX9qMg
-    lastmodified: '2020-10-06T10:07:38Z'
-    mac: ENC[AES256_GCM,data:VcArlrDLnugc24UyUMzT10MigESIH+WvS+w+XuYc70F+I602yjB1SdgoLI0Kgu70gNqSzaVntAhX2RcDZY+P9nXJFTGWVYaEj1AJS3hYlBEpGHspd5Csbd/1Qc4A/6PUGbIo2FSw/qUhOOEqCqj/6qSuLtbA4ECe5Ne4KwT3smk=,iv:jQy35T/IeD89mWue225dpe4zakbV0w2BIl0VbWaYkJw=,tag:80SdQ4MhruGYntVIW0LjZw==,type:str]
+        version: 2beba064ddfe454482ad0133af2cf0fd
+        created_at: '2020-10-16T12:13:02Z'
+        enc: BBJ2UV3Scz5fjJI3GfAIEFWQlAJewoNTyyYicDIPwOLbq1OHQ89_UMQfYF2zrZQiPMpvgMMgPDFRYXoEqEbV6-xSZhgkW6kbyvv5dviuyIo2d4DSzbZZoEGELgzHF16PZdMJHhoEdug6C4Lwx5YVJis1GIqqD-aFYBBPWRJ7Ly3qWoMSRaI2Ads6igZjofO4gjHqWpDi3q5hNbubst7c20lY9R6wUN8_GjZMpmzFE23G6Kfotra2iNwiCwWd3lwRgFUxSyscv2qPx9FoaqhhTowKIr-09cm5qznHHbcLNBoQVMyG4coL6ujh9DXnwgExm2NJ5McE0ctH_u-nO9RUcQ
+    hc_vault: []
+    lastmodified: '2020-10-16T12:13:03Z'
+    mac: ENC[AES256_GCM,data:GaXp2UToPIqjzYmop7y6kOcOnnAKe3lCB+l7xe0/ZaVCuc1AncDZwsyAdVLwrCSKTrgJsJD3fSAt+VYcfUAsKeIsCNgt2DfFo6VQ+5idajTk9Bi3isFKFmy/Ak40kgopcUKXxZpAQJwZi/TKCH4WWG0iC8lwHZI+4FjZBZq05b4=,iv:l0s+dk95cBaFQ0f8KCK4UNyRSgkjUQ+/8QIO5q5iQDc=,tag:QggEamimaiQaQIOZB1ZTyw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
-    version: 3.5.0
+    version: 3.6.1
