--- a/k8s/environments/dev/common/secrets/kured-values.enc.yaml
+++ b/k8s/environments/dev/common/secrets/kured-values.enc.yaml
@@ -1,22 +1,23 @@
-kind: ENC[AES256_GCM,data:SD1Mju/u,iv:BHxfsaHmPs2hQP5vLhXdw7bgEikftfpJj6IdwKw4ghs=,tag:Lk/T0ShSh26FVCWbpOOUMw==,type:str]
-apiVersion: ENC[AES256_GCM,data:vcI=,iv:W55S8V1jUXLNMonLeWcJVHqRA9wHabzurz5kEYJHViI=,tag:a+nXOv2Tgk618d2zFAxLFw==,type:str]
+kind: ENC[AES256_GCM,data:SL0QrO6c,iv:pGKtYvWla8szAn2K86bCbgTUX8b2xR6V0yGDrNmDm/I=,tag:KJ5Qn5vO4+Hl1/mktIY41g==,type:str]
+apiVersion: ENC[AES256_GCM,data:0J4=,iv:sSnAnRlmte6ByB+kitlXq0duDDiIWPKzYNYDrbfBxFE=,tag:9GisiA5+Z0TBUGE4uTnUug==,type:str]
 data:
-    values.yaml: ENC[AES256_GCM,data:XzBee7l/M4QnjZNxXhtZyN0EWwh3ZNN9grF2mZd7cVAPUxE8Ec9RTlmHyeV5Y+jd/SP8Pd09iRoiK9sVKHG2vm1E32d+X9/le6Rjvr+42el8FdF+vm2C+7sCOCa2OmvdixTSDdqcoXAzmBQNdegmGipTtJrX82ICwJN2471Ib5SDSAFeEtIkcUckdPQ=,iv:NMO/9ng9OXT7ixMUqemY8nSXGAPjVJW/SaipBd7EEUI=,tag:ynv4fbxkCaYiZImCKyPikA==,type:str]
-type: ENC[AES256_GCM,data:jQEZFcA2,iv:6BcH9M4YG4lJ6HaJNV5HOOsEzXBJWAP+T9wcqHGqCIM=,tag:ZD3x5LYJMEjO1EsbHgJjAg==,type:str]
+    values.yaml: ENC[AES256_GCM,data:ggVTAEWTG3OJJ5rgxNZBBb+uebz3Y6GPr/xf2Rs8VGAZl4oolAUN34ZmNuswmkXbi03Pusq7FO05IA7zzv9K3/9YQCi4O9o+dgXg8xbll0Gv0WwTR5oZHN8GuR8R/rfuDfaXGJojCN/r/JbKLyDZA/YNVrmOr9aNXhd4WlhQeuujQcnVFwSNOu/44Pg=,iv:VDKzaMPAS6SJAsI+Zou1q7YenurFZ3CtlPtaNbDNdoI=,tag:rGRN3LFFy0lfzwtubQ5cVQ==,type:str]
+type: ENC[AES256_GCM,data:iAJBEg1R,iv:m54/rQVc4tUXt7v3vmlmbBZwB3gyG/6gakexHaLbuZk=,tag:75ykJqh1XtNH3Box0qs99w==,type:str]
 metadata:
-    name: ENC[AES256_GCM,data:ZX6PWHFIw2Ws84De,iv:YWaAae2Z0wPRPjkp7bdjmksRtUQa8LuYto4MNnK5a8Q=,tag:u2ZDyTawyAhAGwTjxQ+TXQ==,type:str]
-    namespace: ENC[AES256_GCM,data:VXjuRog=,iv:vpjPhTOZ/LhcKbI99rNKYh1aAQa5LgfLhHcY/7zMEXg=,tag:vcpS/5u/SEW2Uw75UvgHgg==,type:str]
+    name: ENC[AES256_GCM,data:Iuysg+bnn5ktDJ+Q,iv:lmVYzR5xIY293CBgWErNLIhM2MAqLF+qdVsctY2+k44=,tag:WXaWTbdGYt7Ce2nSaBe+0A==,type:str]
+    namespace: ENC[AES256_GCM,data:Jdq4RgY=,iv:U2pNZtmm/prThiDXtUOCTsmkPy7gCGCGeZxJHIDxdCw=,tag:qw1bL5qoFivbcOFodr3jnw==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv:
     -   vault_url: https://dtssharedservicesdevkv.vault.azure.net
         name: sops-key
-        version: c3027a429d574a559d854c84fae08419
-        created_at: '2020-10-06T10:07:10Z'
-        enc: Tr-ZxgVxvlQoW1mCey4K3s3_i4eKrYL21KCmSHSDUrQw6rydjyyB729rBnJlyiC7RpQDMTfwBSMNSt3alF9fwLPlGBLL0oTw67sQ97-aU4ZEqlLYH-ZhIGGtRMqARpBl0iAZWlC5KfSEyZcPRp05KRmvvfRt17470qaW0sWMihUhPXqQm_rUl-iqpmk3X24m92XQGrrSw2LsdsZUAaaTKobpjD2NrYWp4NRqU8jciiaebm_mhH2cQkyzw03B4cNmEBVSkDInh0S2OpQy-eiJY9Te64fWiJVdSc0TNC0sdNhbiWpk_xCvFdwAflYvqmkzngsNWV59771ih--2JZHpbQ
-    lastmodified: '2020-10-06T10:07:13Z'
-    mac: ENC[AES256_GCM,data:Sc3z0czf48wNVCAOzlNwNNj/k+PGX0b9QyQkKn0km23CTP8+aiObeh7bJFkvzVfajxMYzRWSSeb8JyPb6jqPRXDSkoztG96fbDyF8SwmU7EFMx89IYZoRNPz31kWl/QOxQamBc1Ha2yrxtdVTIdExRDDNHufdoIHc/HaCuuWIrI=,iv:VvQSH+jYPx5JcghcigdTipUrH2fwTUPUzz82PlHAZFQ=,tag:EV1/Q9Q1S+/Sc4ubLPW+MA==,type:str]
+        version: 2beba064ddfe454482ad0133af2cf0fd
+        created_at: '2020-10-16T12:12:56Z'
+        enc: fUWWJGWL05sZIucGmsa76QgI2naFu2Wr4w0V6EH_-Ve_T6fasl9CnLhw4f5vO_BVMKboZVNORA8Fls2MCLH74QJqf17DTBFgkqsRM32B7PBdKwqZOlhRKPxKfpw_odwQg3zrPppS8jg16mItN2mrJ3AHstl4g7YKRdR1CEiyD0vEEcMAt_5cUaNjeQcnCCpiQCynNnSVRnOYAKn4VwnkIkmAFetsCtiZugu3iA3NNtjQQmQ564aWjfunoWKDXWozCUE6G6v7km--rQHvmHNiwwZL44r3zUb4Mmz1TDpz-V0v8e1D_dvv3aGg-uZ4Hr7_M20H8e4UZpk0tp_y3kDEnA
+    hc_vault: []
+    lastmodified: '2020-10-16T12:12:58Z'
+    mac: ENC[AES256_GCM,data:Zv6QiUfoisdOZ+pA5btaWqt25urvs+3OJiw8SznViU3JLJMzOoWNBi0xQRHufwn7OlWH+tTTPXPTju9aWEEAxmTPqrtl1gVcNEnj6haSNRr9JYywZA7a77TM8Su0yNVT9pIQ59lc8A7zQ1PXoqFHjKBEmhhJZtEezO2Ja4ZrCFI=,iv:h/9Za1mUYwFMwnwBtn+pBzlsYoEzZE9jZ/3SGMUXZys=,tag:8Ft6UPwt24OMvq823C+SbA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
-    version: 3.5.0
+    version: 3.6.1
