--- a/k8s/environments/sbox/common/secrets/kube-slack-values.enc.yaml
+++ b/k8s/environments/sbox/common/secrets/kube-slack-values.enc.yaml
@@ -1,22 +1,23 @@
-apiVersion: ENC[AES256_GCM,data:z1w=,iv:SnVwDVQkVZz0XEd7hKQp7FkX2LcHXKDtKRuHkA6EAtQ=,tag:RUYakNyEEd8OW1PLFid8Qg==,type:str]
+apiVersion: ENC[AES256_GCM,data:2sI=,iv:DovgxXsGIcCCQmaozojeM9lgG0H2yP7ujIvJs+FgqnI=,tag:jpEnDHnaGRcACcpuqJJHyw==,type:str]
 data:
-    values.yaml: ENC[AES256_GCM,data:GgyhPbUE5+xMlpY/EdkGEUYfG2KGsKa6QB+73+dCM7Mo6EY9cDT9wTLPun8qOoflyP/aC3WD5JUyk3AljoTqvNiABcCqGjJge+8xC9kdji/4A+pADriQnahYqIVAE4zJq9TRKAPpMD5valflPpR7Yivxk/HJoL02VMDw6nS/Uc51kzJn,iv:dlJc25U1//ugwyaCVEjAcMlB20PkSOkCe1wRcdzmdVc=,tag:WizbCdDiQbzYMNk8mIeU4w==,type:str]
-kind: ENC[AES256_GCM,data:Yji01vMr,iv:ZPJ+ECZdTSTw6XZkK0ju9p2McnAJg5IN0RhzKAA1E+4=,tag:kYathAzuqiCJSTL/Y/8AKg==,type:str]
+    values.yaml: ENC[AES256_GCM,data:mXXJubXArwZQe5corr+WE9ROPq7TGQpbkYmZnbhR/wHll0jXTnZKzTMIjBRi10V4SUUHOHi8scZz8PDDW7mjz5vsyLpgeQ2ZQsbWRvhJWAw6vlv+pzRjW3UAUzq0QX+eL4sTl9UQoVOSzlqB9Df0KYH1INkxXFHQjQYbCEqWdkwEhvkA,iv:JIpSj0czZyjq88jv7qilyv/IQykYuw/mjigsSzAQvoo=,tag:eU65D73gb/YEMmDqO9j3tA==,type:str]
+kind: ENC[AES256_GCM,data:yrzq50XR,iv:h8IlSHSsZWCwide0RsJhDggLUBHNQW3LCcC5sVFTC6U=,tag:5SHpsBUTxCXb49XQejA0ug==,type:str]
 metadata:
     creationTimestamp: null
-    name: ENC[AES256_GCM,data:SHkwSQKSY1IYTi7Hsdu6VO0=,iv:b+CaPYYLnM97H/xm3ZqIYD6yiQaiunZD7+AipEtziiw=,tag:YnDpX0ED4SoNdvjNMli0Ag==,type:str]
-    namespace: ENC[AES256_GCM,data:QznlZsk=,iv:NAMhPw4K2+joQWewF4arc/6ClkNfMd5fA2Ws7SRWKQs=,tag:RL3Tn7dWJCs18ZbZxwAP2g==,type:str]
+    name: ENC[AES256_GCM,data:atq/PCnHLIB9ke7Twr4N/I4=,iv:SpfBLy6ONBrGDtLkGsyVuCZPbHmA1D4LcNWqidGXhPg=,tag:5NoA/hU+eSbn6VT+cGnR5Q==,type:str]
+    namespace: ENC[AES256_GCM,data:D39Gs3o=,iv:d8YyBaVCU0V4d8J3rPeOYnpyTM+lK1Q3pKxmrvZ3m/0=,tag:Omhlo1hcLHcMgyUGUzhFdg==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv:
     -   vault_url: https://dtssharedservicessboxkv.vault.azure.net
         name: sops-key
-        version: 8d3eafdc8ece4cf59030ef2dd0a2698d
-        created_at: '2020-06-29T16:16:50Z'
-        enc: dnQivG7BrsR9vzD_q2wIJ-xMIyK68KbBWOvoRG-EKEHW3FP6D1SKRiczb-0eRlsdKdPAa1NMM7fBW1D-8KV-Q0gIB4KknSLgHvRza8j0ey_KNLPGPdjBHBge6yo9u3UlIWyvpULmtb-3dz4asbnOKa7hZj8sMpc9Mhp3s8009OlKmVRiiivBSGGuxJ7n7EHbVraPIJaWxD68h-7Zm-1-BevhFh2ksH_wYeD08nekRvR3dwtEmoPsNA2DmoQWF266OlWxRZGnv2rhbeGS6ewn4tbZB3SQuNlzolBJmjGjM7QWDCVajDDWi-6FSMepVm3RW_STWdParr8SsTk9Ouy5Ig
-    lastmodified: '2020-06-29T16:16:54Z'
-    mac: ENC[AES256_GCM,data:0rFecNoqwvvuwfu/VeQOyFUzelOO6R0BvYEhS6QvoWaz9vQK+3v50/pMP+CT39b4sYT9p4kGw3fyly0NRaNuJZqX7q66RLNWZYj9d2SmwjdT/vzw4P5eYBi2GHawgLle/ge+c44Y5FWO4Y2vc8MDwU18Ea1LuymHR8KOUuh/P1Y=,iv:V2wYE3+I2vL4jBW5B3c5OOlJ0loPPfJd7Zpe5ZuE1DE=,tag:NsjGOlAzZOV/LB7+OtsGJA==,type:str]
+        version: 743d27d4b20644a6bd1936f3e55d1db3
+        created_at: '2020-10-16T14:47:39Z'
+        enc: maFoirNKkpJyjNGitntDcsNsxLpUYxcuGuRAmv9SpL_kbdSNpn9QMJahus2vO_GjN5yF20Ma2V38jDSWeXwXL9duFF6gid9WZT3a_KapGmXObcnFqNSS0nD-ONPAy71EpGPqwvSlDSRUBegQORPC1Hju3g7YaB2YKnVUMqnDeItjSO3pkrQMhQIjzJRSPOkvImvYXJ3TEABbrTjucbTa4SrU59bBYU_VpIWPcoEXrFwXTG1gVZeKlAt_XPtMPAKIgSBD0o17DXwEOeQ4X7sw1LIThzPBjY_2Q5bu3J_7NzrWqsgoBFZbuQD-RIvcuWjDWDhPEJXvkHOCnw4vTQgzRQ
+    hc_vault: []
+    lastmodified: '2020-10-16T14:47:40Z'
+    mac: ENC[AES256_GCM,data:HQnk1MnAa2bKHu3zM/a0oz8Z7OCPRbqijgFiD40vJWqKg57Xx7UYOOXqqtIsfmmia/BSV82FAbtpHbBuWj0COsXi+EXWkAGyrEJINvWPXro1M6leNz1YZsz9LDJ3f1kaqPwkcIpIx2FmZb2yTl31+py699Xwoh5OGy0griM3crM=,iv:hU4D+VChSIbmIZxEqDhS2cmruNZRF9nvdMcYOKgGrS8=,tag:yOq9AdY18fDAc8xL3s1Hkw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
-    version: 3.5.0
+    version: 3.6.1
