--- a/k8s/environments/sbox/common/secrets/kured-values.enc.yaml
+++ b/k8s/environments/sbox/common/secrets/kured-values.enc.yaml
@@ -1,22 +1,23 @@
-apiVersion: ENC[AES256_GCM,data:2Rg=,iv:/eMNzqMaOz4Le0vTHSHneQxL8VBANPf6b8ScnwaH00c=,tag:k91/5YaXllWV/OFsDwk81g==,type:str]
+kind: ENC[AES256_GCM,data:lmWXjD5C,iv:C0TTpvZJx+wGdrdBGYAj9qN/8IKW0hkSeSvTL7hXUQk=,tag:8IH3UoHkCWz2TyNoRB3w8Q==,type:str]
+apiVersion: ENC[AES256_GCM,data:reQ=,iv:My980MdZstUPpni+IdFhqTiSE2IkEmS4eXeIGlpqJlY=,tag:gf2hIyEm/ddM4m76hFHcwQ==,type:str]
 data:
-    values.yaml: ENC[AES256_GCM,data:nWZr92pdaYmCJgs07mv2fBkVY3emGZzAtX8TjlckTMD5Pm2bDkVc4mp2qIVH/867sfx6GyxPMdrO52tgoqYju+3H2F9S7Zf5FuBp+Qsk8Fa9wzRbkRZrz0Kkj0FI9GpB/KIXQ5Q4Ep7GHOAxWPoXYyfP1Liw+nhLU2vIapjpWM/8ho94A9MXYzqOHdc=,iv:IrzvdjanIa/pt8QWHrO4gxDKFRWJbF520u7o15IvChY=,tag:ndQzOdi0MrvRzy9GfFtEpQ==,type:str]
-kind: ENC[AES256_GCM,data:5zo6l4Xy,iv:EExUkYG0/N0g8RzDzqwZD+KcgtvdIeA9JkZnnsscyDc=,tag:xWtqyug+jNo0SZWDkESI5A==,type:str]
+    values.yaml: ENC[AES256_GCM,data:SJMW2pjL3DJ2lFT/2L9B4ouSWEhUzxb/f2mMYDzAloWk1+NgvnDZRtavxwb2XKLlvjgLmb2mTt3Cz2txj0+OO3iYTpUr+tk+0308mAC8zqadMO/nvbWAlKMjDTmvYClSROnS4HxLGdsBg2f1QVunHPmctnCRnEBebrLMZ1N4uk6muaLTWmAHc0+iQu4=,iv:WvxEE4qimEavbg+YkqY6UjIsQKDZ/n+RXpvV8bZD+28=,tag:x4SFX6SWCsFKt9NeAE4AuA==,type:str]
+type: ENC[AES256_GCM,data:kmF8xlVS,iv:yV5ZXlS/mHgEDlTqy3+3RvuoODDqf0uEYLq8wGQKcBM=,tag:9EblTUS2eAi+QRU6J6v9zg==,type:str]
 metadata:
-    creationTimestamp: null
-    name: ENC[AES256_GCM,data:gN9EhMms1LXkIu26,iv:AxuVoCqEAu8wniWWsv3A0NzeJuWRLGdXsAqB19myVEY=,tag:2d82GzAf0xvV31XWMjoSUg==,type:str]
-    namespace: ENC[AES256_GCM,data:Vt7d/Jw=,iv:BHOn5kITdF2SP9fpgwwYj8UN/6SHBb9gcmSiu1/5SGQ=,tag:HwBKroXIcDoqgHwO/bF2hg==,type:str]
+    name: ENC[AES256_GCM,data:X4XUWhsvKnLGcUi1,iv:f8RCXC7Nm6YXmfzOq893aeHOlV62piXV4+bTZcd56LU=,tag:Qa0hcN2GFZs1HKWiBTpJWg==,type:str]
+    namespace: ENC[AES256_GCM,data:cp+Kv8s=,iv:crtHggJJHh79dqsLwquDAMwc/honoVKcYDRTiJMYYKw=,tag:ZGkhflyJZzRuisC0SDp/2Q==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv:
     -   vault_url: https://dtssharedservicessboxkv.vault.azure.net
         name: sops-key
-        version: 8d3eafdc8ece4cf59030ef2dd0a2698d
-        created_at: '2020-06-29T14:48:12Z'
-        enc: JfGZlcY11e0TSUFPoJw7rAGUOHYK-xXy5occuixjjlOgN0ccPoz54r-IsVY446QG0730znRs0hZ3gHAoK_T0v1cdvH-cHUumLFdA4TnXhIWvJ4H9YgIzXYpNTzWUh2gFkSLUJSlkbQ_RrrA49RdbSHAt5CZPIrEpYBtqf5xhwDtoEkVoHd1iJ58Os_29jAu6iJAPDCgdMwp1anuHQjQfcGnqwmPWRQ44TL_TyqPNM-A-T9blIaEdanF7hq1Gc0B93ilCNTi3d9ab9fVoujJCHmbyLkXWp0ihPiCixUgoUOcTqDvdeF6sgbFq_6k0LAM8nJuf9Z3NGJFOfgrhDNhzDA
-    lastmodified: '2020-06-29T14:48:14Z'
-    mac: ENC[AES256_GCM,data:dtVBuaKOruDsPe/5tlxLJ+qcMJWWeNfv/AAqoTggZXPG/EqGUpqf0lj81Qiac/cqWyfg0iuopqPKBBL2BBDK+znt2e2DQiiY4jJU3xhnGO8eGXhVb1g/fCQ1xT4prpNlCVYtHLl5c86ZgdMDIMkvbqcau+rNeAG/nEBwbzd+fBo=,iv:LtBIFGjZDcqFFP+zg0tkJwoPR1n2DeIO5hkVBjFlDuk=,tag:r89GqZjR+8FNJn+zaipsBQ==,type:str]
+        version: 743d27d4b20644a6bd1936f3e55d1db3
+        created_at: '2020-10-16T14:47:37Z'
+        enc: D8gN_x6PBQ99bckZAxT1s4EjiqJ5VaP_RgocAjYZHRJGkOT_HkU2cqo4-lj2HJQqJfd8uyiE9GbYlmhs6qYOul1O4vpaj9-r-QVnDv3PJY6Sz38joFiTpNf2vpDx3ZIqUokefOOE9QdzbKcYs1r9hMlc8YdOD62JoBEHW-RghGZDvvRUzdW8E4V7n01g18L9wg54MJSJ0MFbqRsOaarytvIY-aI4OXaGwBM23J_YvcDmSQ0LNasg1UuIhKcjUfNcwCeUlhtRxXhFCNK_TjEB183e1VveUOzKifyWni_kbvMdtoIOPB2wbeeYEsu8iEl29Nr_XIPXNQ3Ag4UMjqYhUg
+    hc_vault: []
+    lastmodified: '2020-10-16T14:47:39Z'
+    mac: ENC[AES256_GCM,data:zr8WbcnAkPI1E+dN+wTz/15r7Rm3Uz83djusceAyiVqBawxf5wIHg5BKHVJiqQRVyftsWdaZ4h0vvOCaLtY6112fZWIcxVeIR9MiTuhxDz3cBK7HLK3nvdDVU4/BZGez+/jHKe8Li8jpuNipsQhpfxCQLWPozedezvT1tgvglJY=,iv:KFglldXc7+3jkzrC2J4VBa+LQ0mLx647w+7ze1fqcmg=,tag:+0YPw+t/uzvo6FslflClhQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
-    version: 3.5.0
+    version: 3.6.1
